--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,29 @@ dependencies {
     implementation 'com.github.pwittchen:reactivenetwork-rx2:3.0.2'
     implementation 'com.agilie:swipe2delete:1.0'
 
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
+
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+
+    implementation 'com.github.hadiidbouk:ChartProgressBar-Android:2.0.6'
+    implementation 'com.mikhaellopez:circularfillableloaders:1.3.2'
+
+    implementation 'com.google.android.gms:play-services-ads:16.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-database:16.0.3'
+    implementation 'com.google.firebase:firebase-messaging:17.3.3'
+    implementation 'com.firebaseui:firebase-ui-database:2.1.0'
+
+    implementation 'com.github.chrisbanes:PhotoView:2.2.0'
+
 }
