--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,15 +41,15 @@ dependencies {
 
     def room_version = "2.2.0-rc01"
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //glide lib
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     //room database
     implementation "androidx.room:room-runtime:$room_version"
@@ -66,8 +66,9 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 
     //bar code generate
-    implementation 'com.google.zxing:core:3.3.0'
-    implementation('com.journeyapps:zxing-android-embedded:3.6.0') {transitive = false}
+    implementation 'com.google.zxing:core:3.4.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation('com.journeyapps:zxing-android-embedded:4.2.0') { transitive = false }
 
 
     //pdf generation
@@ -75,31 +76,31 @@ dependencies {
 
     //google admob
 
-    implementation 'com.google.android.gms:play-services-ads:18.2.0'
+    implementation 'com.google.android.gms:play-services-ads:20.2.0'
     implementation 'com.github.pwittchen:reactivenetwork-rx2:3.0.2'
     implementation 'com.agilie:swipe2delete:1.0'
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.2.0'
 
     implementation 'com.github.hadiidbouk:ChartProgressBar-Android:2.0.6'
     implementation 'com.mikhaellopez:circularfillableloaders:1.3.2'
 
-    implementation 'com.google.android.gms:play-services-ads:16.0.0'
-    implementation 'com.google.firebase:firebase-core:16.0.4'
-    implementation 'com.google.firebase:firebase-database:16.0.3'
-    implementation 'com.google.firebase:firebase-messaging:17.3.3'
+    implementation 'com.google.android.gms:play-services-ads:20.2.0'
+    implementation 'com.google.firebase:firebase-core:19.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
     implementation 'com.firebaseui:firebase-ui-database:2.1.0'
 
     implementation 'com.github.chrisbanes:PhotoView:2.2.0'
