--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 
 dependencies {
 
-    def room_version = "2.2.0-rc01"
+
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
@@ -52,8 +52,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     //room database
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androids.room:room-compilter:$room_version"
+    implementation "androidx.room:room-runtime:2.4.0-alpha03"
+    annotationProcessor "androids.room:room-compilter:2.4.0-alpha03"
 
 
     //rx extension
